# VDSP_IDE

./: README.md
arm_tcpip/: Makefile  TCPclient  TCPclient.c  TCPservice  TCPservice.c
audio/: widget.cpp  xyseriesiodevice.cpp
build-spectrum-Desktop_Qt_5_9_1_GCC_64bit-Debug/: Makefile  libfftreal.so.1.0.0
build-spectrum-Desktop_Qt_5_9_1_GCC_64bit-Debug/app/: Makefile  moc_engine.cpp  moc_levelmeter.cpp  moc_mainwidget.cpp  moc_progressbar.cpp  moc_settingsdialog.cpp  moc_spectrograph.cpp  moc_spectrumanalyser.cpp  moc_tonegeneratordialog.cpp  moc_waveform.cpp  qrc_spectrum.cpp
linux_app/: CMakeLists.txt  build.sh  toolschain.cmake
linux_app/src/engine/: .main.cc.swp  CMakeLists.txt  main.cc  vsp_input.cc  vsp_input.h  vsp_ioctl.h
multicat_arm/: Makefile  sender  sender.c
